--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial-scale="1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Simple JS App</title>
   </head>
   <body>
-    <ul class="pokemonList"></ul>
+    <header class='heading'>
+      <h1>POKEDEX</h1>
+      <h2>Generation One</h2>
+    </header>
+    <div class='wrapper'>
+      <ul class='pokemon-list'></ul>
+    </div>
+    <div id='modal-container'></div>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
